[gd_scene load_steps=5 format=3 uid="uid://claddxqplobmt"]

[ext_resource type="Script" path="res://enemy_entity.gd" id="1_g5iae"]
[ext_resource type="PackedScene" uid="uid://4jln7hmp0y8w" path="res://classes/character_entity.tscn" id="2_r4o2t"]
[ext_resource type="PackedScene" uid="uid://d1p4vcnjftt27" path="res://classes/action_manager.tscn" id="3_5jaf3"]
[ext_resource type="Script" path="res://EnemyAI.gd" id="4_dctc7"]

[node name="EnemyEntity" type="Node"]
script = ExtResource("1_g5iae")

[node name="CharacterEntity" parent="." instance=ExtResource("2_r4o2t")]

[node name="ActionManager" parent="." instance=ExtResource("3_5jaf3")]

[node name="EnemyAI" type="Node" parent="."]
script = ExtResource("4_dctc7")
